--- a/M2_Image Segmentation/Thresholding_methods.ipynb
+++ b/M2_Image Segmentation/Thresholding_methods.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPJz6RsQSTzHFHpJWv71LDS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,13 +22,23 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/raulbenitez/Tirana_CV/blob/main/IMAGE%20SEGMENTATION/Thresholding_methods.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xtianu/CV_Tirana/blob/main/M2_Image%20Segmentation/Thresholding_methods.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# SEGMENTATION BY THRESHOLDING"
+        "# MODULE 2: IMAGE SEGMENTATION\n",
+        "Christian Mata, PhD"
+      ],
+      "metadata": {
+        "id": "eo6fETWcr5ua"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# PART 1: SEGMENTATION BY THRESHOLDING"
       ],
       "metadata": {
         "id": "2kmqTejJzcwx"
@@ -56,7 +65,7 @@
         "id": "0WoXw7CCz46b",
         "outputId": "3ed1bbae-08e8-475b-a7d4-9af3e5f9f3d1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -89,7 +98,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -112,7 +121,7 @@
       ],
       "source": [
         "import matplotlib.pyplot as plt\n",
-        " \n",
+        "\n",
         "\n",
         "flat_data = I.flatten()\n",
         "fig = plt.figure(figsize=(6,4), dpi= 100, facecolor='w', edgecolor='k')\n",
@@ -124,8 +133,8 @@
       "cell_type": "code",
       "source": [
         "\n",
-        "T1 = 90 \n",
-        "T2 = 180 \n",
+        "T1 = 90\n",
+        "T2 = 180\n",
         "\n",
         "fig = plt.figure(figsize=(6,4), dpi= 100, facecolor='w', edgecolor='k')\n",
         "n = plt.hist(flat_data,bins=100,range=[1,flat_data.max()])\n",
@@ -141,7 +150,7 @@
         "id": "AqAG6hn1zf4o",
         "outputId": "1f102315-eeba-4c1d-8fff-f61a9c7f8261"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -174,7 +183,7 @@
         "id": "bSyL2ARr1BA8",
         "outputId": "72f1f268-ac82-4334-c4dc-d968ed95c1b1"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -220,7 +229,7 @@
         "id": "sxYzbpUVzt5W",
         "outputId": "3f179f04-a0e1-4ea7-b8ae-27117a045174"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -252,7 +261,7 @@
         "id": "tvf5Ajhfzxhz",
         "outputId": "f01c3bfe-085b-4069-85a0-8aa3c9708164"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -308,7 +317,7 @@
         "\n",
         "plt.subplots_adjust()\n",
         "plt.show()\n",
-        "     "
+        ""
       ],
       "metadata": {
         "colab": {
@@ -318,7 +327,7 @@
         "id": "2Vkh7l43z4Cw",
         "outputId": "d03dd78e-0eb3-417e-c487-c8e0c66a1e08"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
