--- a/M2_Image Segmentation/Segmentation_Clustering_Intro.ipynb
+++ b/M2_Image Segmentation/Segmentation_Clustering_Intro.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwJKGsz6KBaOWW0UAQFu9G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,17 +22,29 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/raulbenitez/Tirana_CV/blob/main/IMAGE%20SEGMENTATION/Segmentation_Clustering_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xtianu/CV_Tirana/blob/main/M2_Image%20Segmentation/Segmentation_Clustering_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# IMAGE SEGMENTATION USING CLUSTERING ALGORITHMS\n",
+        "# MODULE 2: IMAGE SEGMENTATION\n",
+        "Christian Mata, PhD\n"
+      ],
+      "metadata": {
+        "id": "RP18eVZhsZnM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# PART 2: Unsupervised segmentation\n",
         "\n",
-        "To apply a clustering algorithm, we first need a numerical dataset with N observations and d features. In the case of an RGB image, the number of observations corresponds to the number of pixels of the image and the number of features corresponds to the number of color channels. \n",
+        "**CLUSTERING ALGORITHMS**\n",
         "\n",
-        "We first read the image and reshape the data as a Nxd array "
+        "To apply a clustering algorithm, we first need a numerical dataset with N observations and d features. In the case of an RGB image, the number of observations corresponds to the number of pixels of the image and the number of features corresponds to the number of color channels.\n",
+        "\n",
+        "We first read the image and reshape the data as a Nxd array"
       ],
       "metadata": {
         "id": "jxi_9dy6Pf02"
@@ -117,7 +128,7 @@
         "v_kmeans = kmeans.predict(v_I)\n",
         "#v_kmeans= np.logical_not(v_kmeans) # use when the pattern is associated to cluster 0 (vessels shoyld be white)\n",
         "I_kmeans = np.reshape(v_kmeans,(I.shape[0],I.shape[1])) # reshape back to original image size\n",
-        " # Shape back result as image \n",
+        " # Shape back result as image\n",
         "\n",
         "fig = plt.figure(figsize=(10, 10))\n",
         "gs = gridspec.GridSpec(1, 2)\n",
@@ -161,9 +172,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## 2. Gaussian Mixture Models (GMM) \n",
+        "## 2. Gaussian Mixture Models (GMM)\n",
         "\n",
-        "We model the distribution of the multidimensional observations using a mixture of gaussian distributions: \n",
+        "We model the distribution of the multidimensional observations using a mixture of gaussian distributions:\n",
         "\n",
         "  ## $p(\\vec{x}) = \\sum_{i=1}^G \\pi_i N(\\vec{\\mu_i},\\Sigma)$\n",
         "\n",
