--- a/M2_Image Segmentation/Supervised_Segmentation.ipynb
+++ b/M2_Image Segmentation/Supervised_Segmentation.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Segmentation_PRML.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,10 +16,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/xtianu/CV_Tirana/blob/main/M2_Image%20Segmentation/Supervised_Segmentation.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# MODULE 2: IMAGE SEGMENTATION\n",
+        "\n",
+        "Christian Mata, PhD"
+      ],
+      "metadata": {
+        "id": "aEqhwVxiuzca"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "gMx1tOA9Uzd-"
       },
       "source": [
-        "# Image segmentation: Supervised vs unsupervised approaches\n",
+        "# PART 3: Supervised vs unsupervised approaches\n",
         "\n",
         "Let's consider an image segmentation problem in which we should identify a pattern from the background. In this case, we only have two classes of pixels: pixels belonging to the background and pixels belonging to the pattern of interest (vessels in an image of the retina).\n",
         "\n",
@@ -27,7 +49,7 @@
         "- **Training image** ('vessels_train.jpg'): The one we are using in order to design the sementation method\n",
         "- **Test image** ('vessels_test.jpg'): The image we are going to use in order to test the previously designed segmentation approach\n",
         "\n",
-        "For each of the images we also have their corresponding ground truth sementation images obtained from an independent expert ('vessels_train_GT.tif' and 'vessels_test_GT.tif'). The ground truth images are going to be used only when constructing a supervised approach. We will also use the GT images as reference in order to quantify the performance of the sementation method. "
+        "For each of the images we also have their corresponding ground truth sementation images obtained from an independent expert ('vessels_train_GT.tif' and 'vessels_test_GT.tif'). The ground truth images are going to be used only when constructing a supervised approach. We will also use the GT images as reference in order to quantify the performance of the sementation method."
       ]
     },
     {
@@ -52,7 +74,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +91,7 @@
         "id": "CmDWf5o6VZFY"
       },
       "source": [
-        "First we take a look to the image dataset: "
+        "First we take a look to the image dataset:"
       ]
     },
     {
@@ -83,18 +105,18 @@
         "outputId": "34d8b7f3-555e-4f50-e3ab-e755a27e94d4"
       },
       "source": [
-        "import skimage as sk \n",
+        "import skimage as sk\n",
         "import matplotlib.pyplot as plt\n",
         "from skimage import io\n",
-        "import os \n",
+        "import os\n",
         "from matplotlib import gridspec\n",
         "\n",
         "# Path of the folder in your google drive unit where you have the images:\n",
         "\n",
         "path = '/content/'\n",
         "\n",
-        "I_train = sk.io.imread(os.path.join(path,'vessels_train.jpg')) \n",
-        "I_train_GT = sk.io.imread(os.path.join(path,'vessels_train_GT.tif')) \n",
+        "I_train = sk.io.imread(os.path.join(path,'vessels_train.jpg'))\n",
+        "I_train_GT = sk.io.imread(os.path.join(path,'vessels_train_GT.tif'))\n",
         "I_test = sk.io.imread(os.path.join(path,'vessels_test.jpg'))\n",
         "I_test_GT = sk.io.imread(os.path.join(path,'vessels_test_GT.tif'))\n",
         "\n",
@@ -124,7 +146,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -165,15 +187,15 @@
         "\n",
         "As a reference, we will first apply well known segmentation approach Otsu's Method. The algorithm finds the threshold that **maximum inter-class variance** $\\sigma _{b}^{2}(t)$, defined in terms of the difference between the means of the two clusters in the image histogram (pattern and background, respectively):\n",
         "\n",
-        "$\\sigma _{b}^{2}(t)=\\omega _{0}(t)\\omega _{1}(t)\\left[\\mu _{0}(t)-\\mu _{1}(t)\\right]^{2}$ \n",
+        "$\\sigma _{b}^{2}(t)=\\omega _{0}(t)\\omega _{1}(t)\\left[\\mu _{0}(t)-\\mu _{1}(t)\\right]^{2}$\n",
         "\n",
-        "The algorithm is the following: \n",
+        "The algorithm is the following:\n",
         "\n",
         "1. Compute histogram and probabilities of each intensity level $p(i), i=0,\\dots L$ where $L=2^n$ for an n-bit grayscale image.\n",
         "\n",
-        "2. Set up initial $\\omega _{i}(0)$ and $\\mu _{i}(0)$ \n",
+        "2. Set up initial $\\omega _{i}(0)$ and $\\mu _{i}(0)$\n",
         "\n",
-        "3. Step through all possible thresholds $t=1,\\ldots L-1$ \n",
+        "3. Step through all possible thresholds $t=1,\\ldots L-1$\n",
         "\n",
         "a) Update $\\omega _{i}$ and $\\mu _{i}$\n",
         "\n",
@@ -186,9 +208,9 @@
         "\n",
         "$\\mu _{1}(t)={\\frac {\\sum _{i=t}^{L-1}ip(i)}{\\omega _{1}(t)}}$\n",
         "\n",
-        "b) Compute $\\sigma _{b}^{2}(t)=\\omega _{0}(t)\\omega _{1}(t)\\left[\\mu _{0}(t)-\\mu _{1}(t)\\right]^{2}$ \n",
+        "b) Compute $\\sigma _{b}^{2}(t)=\\omega _{0}(t)\\omega _{1}(t)\\left[\\mu _{0}(t)-\\mu _{1}(t)\\right]^{2}$\n",
         "\n",
-        "4. Desired threshold corresponds to the maximum inter-class variance $\\sigma _{b}^{2}(t)$ "
+        "4. Desired threshold corresponds to the maximum inter-class variance $\\sigma _{b}^{2}(t)$"
       ]
     },
     {
@@ -231,7 +253,7 @@
         "ax3.set_title('Image Histogram and Otsu threshold')\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -264,7 +286,7 @@
         "\n",
         "[1] Specify the number of clusters $k$ to be found in data.\n",
         "\n",
-        "[2] Set initial values for the cluster centroids $\\mu^0_1,\\dots,\\mu^0_k$ (at random or prior knowledge). \n",
+        "[2] Set initial values for the cluster centroids $\\mu^0_1,\\dots,\\mu^0_k$ (at random or prior knowledge).\n",
         "\n",
         "[3] Assign each observation to the nearest cluster (euclidean distance).\n",
         "\n",
@@ -288,7 +310,7 @@
         "import numpy as np\n",
         "\n",
         "# reshape training image as 1d array:\n",
-        "v_I_train = I_train.reshape(I_train.shape[0]*I_train.shape[1],1).astype(np.uint8) \n",
+        "v_I_train = I_train.reshape(I_train.shape[0]*I_train.shape[1],1).astype(np.uint8)\n",
         "\n",
         "# Fit a Kmeans clustering model with two clusters using training image:\n",
         "kmeans = KMeans(n_clusters=2, random_state=0).fit(v_I_train)\n",
@@ -298,7 +320,7 @@
         "\n",
         "v_kmeans = kmeans.predict(v_I_test)\n",
         "#v_kmeans= np.logical_not(v_kmeans) # use when the pattern is associated to cluster 0 (vessels shoyld be white)\n",
-        "I_kmeans = np.array(v_kmeans).reshape(I_test.shape[0],I_test.shape[1]).astype(np.uint8) # Shape back result as image \n",
+        "I_kmeans = np.array(v_kmeans).reshape(I_test.shape[0],I_test.shape[1]).astype(np.uint8) # Shape back result as image\n",
         "\n",
         "fig = plt.figure(figsize=(15, 15))\n",
         "gs = gridspec.GridSpec(1, 2)\n",
@@ -315,7 +337,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -357,7 +379,7 @@
       },
       "source": [
         "import numpy as np\n",
-        "import skimage as sk \n",
+        "import skimage as sk\n",
         "import matplotlib.pyplot as plt\n",
         "from matplotlib import gridspec\n",
         "from sklearn import mixture\n",
@@ -368,13 +390,13 @@
         "\n",
         "for kG in np.arange(1,NMAX+1):\n",
         "    gmm = mixture.GaussianMixture(n_components=kG,covariance_type='full').fit(v_I_train)\n",
-        "    bic.append(gmm.bic(v_I_train)) \n",
+        "    bic.append(gmm.bic(v_I_train))\n",
         "    print(bic)\n",
         "\n",
         "idx_winner = np.argmin(bic)\n",
         "print('...and the winner is GMM model G = {}'.format(idx_winner+1))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -425,7 +447,7 @@
         "ax2.set_axis_off()\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -476,14 +498,14 @@
       "source": [
         "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
         "\n",
-        "v_train_GT = I_train_GT.reshape(I_train_GT.shape[0]*I_train_GT.shape[1],1).astype(np.bool) \n",
+        "v_train_GT = I_train_GT.reshape(I_train_GT.shape[0]*I_train_GT.shape[1],1).astype(np.bool)\n",
         "\n",
         "lda_model = LinearDiscriminantAnalysis(store_covariance=True)\n",
         "lda_model.fit(v_I_train, v_train_GT.ravel()) # Train with training image and training Ground Truth\n",
         "\n",
         "# Predict the test image:\n",
         "v_lda = lda_model.predict(v_I_test)\n",
-        "I_lda = np.array(v_lda).reshape(I_test.shape[0],I_test.shape[1]).astype(np.uint8) # Shape back result as image \n",
+        "I_lda = np.array(v_lda).reshape(I_test.shape[0],I_test.shape[1]).astype(np.uint8) # Shape back result as image\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "fig, ax = plt.subplots(1, 2, figsize=(20, 20))\n",
@@ -498,7 +520,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -543,14 +565,14 @@
       "source": [
         "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
         "\n",
-        "v_train_GT = I_train_GT.reshape(I_train_GT.shape[0]*I_train_GT.shape[1],1).astype(np.bool) \n",
+        "v_train_GT = I_train_GT.reshape(I_train_GT.shape[0]*I_train_GT.shape[1],1).astype(np.bool)\n",
         "\n",
         "qda_model = QuadraticDiscriminantAnalysis(store_covariance=True)\n",
         "qda_model.fit(v_I_train, v_train_GT.ravel()) # Train with training image and training Ground Truth\n",
         "\n",
         "# Predict the test image:\n",
         "v_qda = lda_model.predict(v_I_test)\n",
-        "I_qda = np.array(v_qda).reshape(I_test.shape[0],I_test.shape[1]).astype(np.uint8) # Shape back result as image \n",
+        "I_qda = np.array(v_qda).reshape(I_test.shape[0],I_test.shape[1]).astype(np.uint8) # Shape back result as image\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "fig, ax = plt.subplots(1, 2, figsize=(20, 20))\n",
@@ -565,7 +587,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,14 +632,14 @@
       "source": [
         "from sklearn.naive_bayes import GaussianNB\n",
         "\n",
-        "v_train_GT = I_train_GT.reshape(I_train_GT.shape[0]*I_train_GT.shape[1],1).astype(np.bool) \n",
+        "v_train_GT = I_train_GT.reshape(I_train_GT.shape[0]*I_train_GT.shape[1],1).astype(np.bool)\n",
         "\n",
         "gnb_model = GaussianNB()\n",
         "gnb_model.fit(v_I_train, v_train_GT.ravel()) # Train with training image and training Ground Truth\n",
         "\n",
         "# Predict the test image:\n",
         "v_gnb = gnb_model.predict(v_I_test)\n",
-        "I_gnb = np.array(v_gnb).reshape(I_test.shape[0],I_test.shape[1]).astype(np.uint8) # Shape back result as image \n",
+        "I_gnb = np.array(v_gnb).reshape(I_test.shape[0],I_test.shape[1]).astype(np.uint8) # Shape back result as image\n",
         "\n",
         "import matplotlib.pyplot as plt\n",
         "fig, ax = plt.subplots(1, 2, figsize=(20, 20))\n",
@@ -632,7 +654,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,9 +693,9 @@
         "- False positive (FP): A background pixel that has been mistakenly segmented as pattern (false alarm, Type I error)\n",
         "- False negative (FN): A pattern pixel that has been mistakenly segmented as bavkground (omission, Type II error)\n",
         "\n",
-        "The confusion matrix is a 2x2 matrix reporting these four values: TP,TNFP,FN. \n",
+        "The confusion matrix is a 2x2 matrix reporting these four values: TP,TNFP,FN.\n",
         "\n",
-        "From them we can define different measures of error: \n",
+        "From them we can define different measures of error:\n",
         "\n",
         "- Sensitivity, recall, hit rate, or true positive rate (TPR):\n",
         "\n",
@@ -683,7 +705,7 @@
         "\n",
         "$\\text{TNR} =\\frac{TN}{TN+FP}$\n",
         "\n",
-        "- The Sorensen-Dice similarity index: \n",
+        "- The Sorensen-Dice similarity index:\n",
         "\n",
         "Measures the similarity between a segmentation mask and the ground truth mask by computing the F1 score\n",
         "is the harmonic mean of precision and sensitivity:\n",
@@ -703,7 +725,7 @@
       "source": [
         "from sklearn.metrics import confusion_matrix\n",
         "\n",
-        "v_test_GT = I_test_GT.reshape(I_test_GT.shape[0]*I_test_GT.shape[1],1).astype(np.bool) \n",
+        "v_test_GT = I_test_GT.reshape(I_test_GT.shape[0]*I_test_GT.shape[1],1).astype(np.bool)\n",
         "\n",
         "CM_lda = confusion_matrix(v_test_GT,np.array(v_lda).astype(np.bool))\n",
         "tn, fp, fn, tp = CM_lda.ravel()\n",
@@ -713,7 +735,7 @@
         "\n",
         "print('LDA Segmentation: TPR={}, FPR={}, DSC={}'.format(TPR_lda,FPR_lda,DSC_lda))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +778,7 @@
         "\n",
         "print('QDA Segmentation: TPR={}, FPR={}, DSC={}'.format(TPR_qda,FPR_qda,DSC_qda))"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,7 +818,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -828,7 +850,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +877,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
