--- a/M2_Image Segmentation/Exercise 2.ipynb
+++ b/M2_Image Segmentation/Exercise 2.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/xtianu/CV_Tirana/blob/main/M1_Image%20Processing/Exercise%201.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xtianu/CV_Tirana/blob/main/M2_Image%20Segmentation/Exercise%202.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -16,13 +16,12 @@
         "id": "5ZUuhuOnoIfl"
       },
       "source": [
-        "# Module 1: IMAGE PREPROCESSING"
+        "# Module 2: IMAGE SEGMENTATION"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Module 1: Image Preprocessing\n",
         "Christian Mata, PhD"
       ],
       "metadata": {
@@ -32,7 +31,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Exercise 1\n",
+        "# Exercise 2\n",
         "\n",
         "**Before starting:**\n",
         "\n",
@@ -43,37 +42,13 @@
         "\n",
         "Generate a single Python notebook implementing and answering the following questions:\n",
         "\n",
-        "**- Task 1:** Load the built-in image 'coffee' of the skimage libraries. Details can be found at https://scikit-image.org/docs/stable/auto_examples/data/plot_general.html#sphx-glr-auto-examples-data-plot-general-py\n",
+        "🔹 **Task 1:** Load an image and apply a thresholding method. Analyze and discuss the segmentation results.\n",
         "\n",
-        "**- Task 2:** Use the skimage function random_noise to add each of the 7 different types of noise available and generate a 4x2 panel figure with the original image and the 7 corrupted versions. The noise types are:\n",
+        "🔹 **Task 2:** Load an image and apply an unsupervised segmentation method (e.g., K-Means). Evaluate and comment on the outcome.\n",
         "\n",
-        "* ‘gaussian’ Gaussian-distributed additive noise.\n",
-        "* ‘localvar’ Gaussian-distributed additive noise, with specified\n",
-        "local variance at each point of image.\n",
-        "* ‘poisson’ Poisson-distributed noise generated from the data.\n",
-        "* ‘salt’ Replaces random pixels with 1.\n",
-        "* ‘pepper’ Replaces random pixels with 0 (for unsigned images) or\n",
-        "-1 (for signed images).\n",
-        "* ‘s&p’ Replaces random pixels with either 1 or low_val, where\n",
-        "low_val is 0 for unsigned images or -1 for signed images.\n",
-        "* ‘speckle’ Multiplicative noise using out = image + n*image, where\n",
-        "n is Gaussian noise with specified mean & variance.\n",
+        "🔹 **Task 3:** Load an image and apply a supervised segmentation method (e.g., with annotated labels or using a classifier). Discuss the effectiveness and limitations.\n",
         "\n",
-        "Documentation of the function can be found at\n",
-        "https://scikit-image.org/docs/stable/api/skimage.util.html#skimage.util.random_noise\n",
-        "\n",
-        "**- Task 3:** Select one of the noise types and generate 3 noisy images with different noise intensity levels. Represent the original image along with them in a 2x2 figure.\n",
-        "\n",
-        "**- Task 4: **The standard deviation for Gaussian kernel affects the behavior of the gaussian filter (parameter sigma, see documentation https://scikit-image.org/docs/stable/api/skimage.filters.html#skimage.filters.gaussian). Explore the effect of the parameter sigma when applying a gaussian filter to the tree noisy images generated in the previus task. Represent and comment the results.\n",
-        "\n",
-        "**- Task 5:** Detect the edges of the bricks in the built-in image 'bricks' using a Prewitt edge detection filter. Quantify what is the fraction of the image corresponding to bricks and to edges.\n",
-        "\n",
-        "**- Task 6:** Apply a high-pass filter and a low-pass filter in the frequency domain to the skimage built-in image 'grass'. Represent the results and discuss the correspondance between spatial patterns in the original image and high/low frequency components of its the Fourier transform.\n",
-        "\n",
-        "**- Task 7:** Use the function binary_blobs to generate an image with random blobs: https://scikit-image.org/docs/stable/api/skimage.data.html#skimage.data.binary_blobs\n",
-        "How many consecutive morphological erosions are needed in order to remove all the blobs? Use a disk-shaped structuring element of radius 3 pixels (footprint). https://scikit-image.org/docs/stable/api/skimage.morphology.html#skimage.morphology.disk\n",
-        "\n",
-        "\n"
+        "🔹 **Task 4:** Explain the main differences between supervised and unsupervised segmentation approaches. Discuss their advantages and disadvantages, and illustrate your explanation with an example.\n"
       ],
       "metadata": {
         "id": "9HoIhrFu2MoR"
