--- a/M2_Image Segmentation/p1_Thresholding_methods.ipynb
+++ b/M2_Image Segmentation/p1_Thresholding_methods.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/xtianu/CV_Tirana/blob/main/M2_Image%20Segmentation/Thresholding_methods.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xtianu/CV_Tirana/blob/main/M2_Image%20Segmentation/p1_Thresholding_methods.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -63,9 +63,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0WoXw7CCz46b",
-        "outputId": "3ed1bbae-08e8-475b-a7d4-9af3e5f9f3d1"
+        "outputId": "7ae2c1ca-ccc8-417a-9ae6-5519a9794902"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 1
         }
       ]
     },
@@ -316,8 +316,7 @@
         "ax[2].axis('off')\n",
         "\n",
         "plt.subplots_adjust()\n",
-        "plt.show()\n",
-        ""
+        "plt.show()\n"
       ],
       "metadata": {
         "colab": {
