--- a/M3_Image Classification/p2_regional_attributes_colab.ipynb
+++ b/M3_Image Classification/p2_regional_attributes_colab.ipynb
@@ -759,41 +759,55 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install scikit-image==0.21 --quiet"
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import pandas as pd\n",
+        "\n",
+        "from skimage.feature.texture import greycomatrix, greycoprops  # ✅ versión 0.25\n",
+        "from skimage.measure import regionprops\n",
+        "from skimage import data, img_as_ubyte\n",
+        "\n",
+        "# Supón que ya tienes `label_image` y `IG` definidos\n",
+        "# IG debe ser una imagen en escala de grises, tipo uint8\n",
+        "# label_image es el mapa de etiquetas de regiones\n",
+        "\n",
+        "props = regionprops(label_image, intensity_image=IG)\n",
+        "\n",
+        "nregions = len(props)\n",
+        "props_texture = np.zeros((nregions, 5))\n",
+        "\n",
+        "for iregion, p in enumerate(props):\n",
+        "    minr, minc, maxr, maxc = p.bbox\n",
+        "    region_img = IG[minr:maxr, minc:maxc]\n",
+        "\n",
+        "    # Asegurarse de que la imagen está cuantizada entre 0 y levels-1\n",
+        "    levels = 8\n",
+        "    region_img = (region_img / (256 / levels)).astype(np.uint8)\n",
+        "\n",
+        "    # Calcular la GLCM para distancia=1, ángulo=0\n",
+        "    glcm = greycomatrix(region_img, distances=[1], angles=[0], levels=levels, normed=True, symmetric=True)\n",
+        "\n",
+        "    # Extraer propiedades\n",
+        "    props_texture[iregion, 0] = greycoprops(glcm, 'contrast')[0, 0]\n",
+        "    props_texture[iregion, 1] = greycoprops(glcm, 'dissimilarity')[0, 0]\n",
+        "    props_texture[iregion, 2] = greycoprops(glcm, 'homogeneity')[0, 0]\n",
+        "    props_texture[iregion, 3] = greycoprops(glcm, 'energy')[0, 0]\n",
+        "    props_texture[iregion, 4] = greycoprops(glcm, 'correlation')[0, 0]\n",
+        "\n",
+        "# Exportar a Excel\n",
+        "df = pd.DataFrame(props_texture, columns=['Contrast', 'Dissimilarity', 'Homogeneity', 'Energy', 'Correlation'])\n",
+        "df.to_excel(\"Texture_features.xlsx\", index=False)\n",
+        "df"
       ],
       "metadata": {
-        "id": "qRIwnbeRlCJi"
-      },
-      "execution_count": 2,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "os.kill(os.getpid(), 9)"
-      ],
-      "metadata": {
-        "id": "hW5yvhArlPby"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import skimage\n",
-        "print(skimage.__version__)"
-      ],
-      "metadata": {
-        "id": "znP_iBKclNBb",
-        "outputId": "a0dde9dd-49a7-430c-f215-cf0ddefbdd3e",
+        "id": "eEh4IDTrce7K",
+        "outputId": "93e2e4ab-5229-439b-e895-f9cfd2edd662",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 332
+          "height": 384
         }
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "error",
@@ -802,88 +816,11 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-e3379136bc04>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mskimage\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-4-652c1cb842ca>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mskimage\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mskimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgreycomatrix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgreycoprops\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.11/dist-packages/skimage/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m    120\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    121\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 122\u001b[0;31m         \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0m_shared\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgeometry\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m         \u001b[0;32mdel\u001b[0m \u001b[0mgeometry\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m     \u001b[0;32mexcept\u001b[0m \u001b[0mImportError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32mgeometry.pyx\u001b[0m in \u001b[0;36minit skimage._shared.geometry\u001b[0;34m()\u001b[0m\n",
             "\u001b[0;31mValueError\u001b[0m: numpy.dtype size changed, may indicate binary incompatibility. Expected 96 from C header, got 88 from PyObject"
           ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "from skimage import data\n",
-        "from skimage.feature import greycomatrix, greycoprops\n",
-        "import matplotlib.pyplot as plt\n",
-        "\n",
-        "# 1. Cargar una imagen de ejemplo en escala de grises\n",
-        "image = data.camera()\n",
-        "\n",
-        "# 2. Opcional: reducir niveles de gris (por ejemplo, de 256 a 8 niveles)\n",
-        "levels = 8\n",
-        "image = (image / (256 / levels)).astype(np.uint8)\n",
-        "\n",
-        "# 3. Calcular la GLCM\n",
-        "# distances: píxeles de separación (e.g., [1])\n",
-        "# angles: ángulos en radianes (0, 45, 90, 135 grados)\n",
-        "glcm = greycomatrix(image, distances=[1], angles=[0], levels=levels, symmetric=True, normed=True)\n",
-        "\n",
-        "# 4. Calcular propiedades de textura\n",
-        "contrast = greycoprops(glcm, 'contrast')[0, 0]\n",
-        "dissimilarity = greycoprops(glcm, 'dissimilarity')[0, 0]\n",
-        "homogeneity = greycoprops(glcm, 'homogeneity')[0, 0]\n",
-        "ASM = greycoprops(glcm, 'ASM')[0, 0]  # Angular Second Moment\n",
-        "energy = greycoprops(glcm, 'energy')[0, 0]\n",
-        "correlation = greycoprops(glcm, 'correlation')[0, 0]\n",
-        "\n",
-        "# 5. Mostrar resultados\n",
-        "print(f\"Contrast:      {contrast}\")\n",
-        "print(f\"Dissimilarity: {dissimilarity}\")\n",
-        "print(f\"Homogeneity:   {homogeneity}\")\n",
-        "print(f\"ASM:           {ASM}\")\n",
-        "print(f\"Energy:        {energy}\")\n",
-        "print(f\"Correlation:   {correlation}\")\n",
-        "\n",
-        "\n",
-        "# Export all features as a Pandas dataframe:\n",
-        "import pandas as pd\n",
-        "df = pd.DataFrame(props_texture, columns=['Contrast', 'dissimilarity', 'homogeneity', 'energy', 'correlation'])\n",
-        "df.to_excel(\"Texture_features.xlsx\")  # Or provide your desired file path\n",
-        "df"
-      ],
-      "metadata": {
-        "id": "eEh4IDTrce7K",
-        "outputId": "cfa9e45c-f48e-41f4-c33b-06901a5af28d",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 402
-        }
-      },
-      "execution_count": 94,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ImportError",
-          "evalue": "cannot import name 'greycomatrix' from 'skimage.feature' (/usr/local/lib/python3.11/dist-packages/skimage/feature/__init__.py)",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-94-652c1cb842ca>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mskimage\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mskimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgreycomatrix\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgreycoprops\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mImportError\u001b[0m: cannot import name 'greycomatrix' from 'skimage.feature' (/usr/local/lib/python3.11/dist-packages/skimage/feature/__init__.py)",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
         }
       ]
     },
