--- a/M3_Image Classification/Exercise3.ipynb
+++ b/M3_Image Classification/Exercise3.ipynb
@@ -120,18 +120,7 @@
           "metadata": {}
         }
       ],
-      "source": [
-        "import matplotlib.pyplot as plt\n",
-        "import skimage as sk\n",
-        "from skimage import io\n",
-        "\n",
-        "from skimage.filters import threshold_otsu\n",
-        "from skimage.measure import label\n",
-        "\n",
-        "# 1. read RGB image\n",
-        "I = sk.io.imread('/content/drive/MyDrive/UT/TiranaCV2025/baloons.jpg')\n",
-        "plt.imshow(I)"
-      ]
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -144,10 +133,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "IG = sk.color.rgb2gray(I) # Convert RGB image to grayscale\n",
-        "plt.imshow(IG,cmap='gray')"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -191,12 +177,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "from skimage import exposure\n",
-        "\n",
-        "IGC = exposure.adjust_gamma(IG, 0.5)\n",
-        "plt.imshow(IGC,cmap='gray')"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -240,11 +221,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Apply Otsu threshold for segmentation :\n",
-        "thresh = threshold_otsu(IG)\n",
-        "print(thresh)"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -274,10 +251,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "bw = IGC < thresh # keep lighter regions with grayscale intensities above threshold\n",
-        "plt.imshow(bw,cmap='gray')"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -321,12 +295,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "label_image, nregions = label(bw,return_num=True)\n",
-        "\n",
-        "plt.imshow(label_image)\n",
-        "print('number of regions is {}'.format(nregions))"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -367,15 +336,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "from skimage import measure\n",
-        "\n",
-        "props = measure.regionprops_table(label_image,properties=['label','area','eccentricity'])\n",
-        "\n",
-        "df_features = pd.DataFrame(props)\n",
-        "df_features.head()"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -679,12 +640,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import seaborn as sns\n",
-        "\n",
-        "sns.scatterplot(x='area',y='eccentricity',data=df_features)"
+        "Show the sccaterplot the features"
       ],
+      "metadata": {
+        "id": "EMzDXJRS8Uk1"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -728,46 +694,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "df_balloons = df_features.loc[(df_features['area']>500) & (df_features['eccentricity']<0.8)]\n",
-        "\n",
-        "df_balloons.head()\n",
-        "print('number of idenfitied balloons is {}'.format(df_balloons.shape[0]))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Y68V8C5_KE9e",
-        "outputId": "85b43fd1-b441-4b41-d955-6d571bf006eb"
-      },
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "number of idenfitied balloons is 18\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "indx_balloons = df_balloons['label'].values"
-      ],
-      "metadata": {
-        "id": "4bbs7eWbKkRt"
-      },
-      "execution_count": 11,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "indx_balloons"
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -791,18 +718,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "mask_balloons = np.isin(label_image,indx_balloons)"
-      ],
-      "metadata": {
-        "id": "8622h0sbLBL5"
-      },
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "9. Plot the baloons"
@@ -813,20 +728,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Get some figures:\n",
-        "fig, axes = plt.subplots(1,2,figsize=(14, 9))\n",
-        "ax = axes.ravel()\n",
-        "ax[0].imshow(I)\n",
-        "ax[0].set_title('Original image')\n",
-        "ax[1].imshow(mask_balloons,cmap=plt.cm.jet)\n",
-        "ax[1].set_title('Balloons') # set figure title\n",
-        "ax[0].set_axis_off()\n",
-        "ax[1].set_axis_off()\n",
-        "plt.tight_layout()\n",
-        "plt.show()\n",
-        ""
-      ],
+      "source": [],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
