--- a/M3_Image Classification/p2_Regional_attributes.ipynb
+++ b/M3_Image Classification/p2_Regional_attributes.ipynb
@@ -98,7 +98,7 @@
         "id": "THqliD31RXpJ",
         "outputId": "24e5e3d9-c30b-4186-e802-74985a6afd14"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -170,7 +170,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -206,7 +206,7 @@
         "\n",
         "props = regionprops(label_image)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -243,7 +243,7 @@
         "print('Perimeter of Region 1: {} pixels'.format(props[0].perimeter))\n",
         "print('Orientation of Region 1: {} degrees'.format(props[0].orientation))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -303,7 +303,7 @@
         "for ireg in range(0,nregions):\n",
         "    print('Area of region {} is = {} pixels'.format(ireg+1, props[ireg].area))"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -393,7 +393,7 @@
         "plt.title('Histogram of objects areas')\n",
         "plt.show()"
       ],
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -440,7 +440,7 @@
         "print('Small objects correspond to regions: {}'.format(ind_sregions))\n",
         "print('The areas of the small objects are {}'.format(area_small))"
       ],
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +493,7 @@
         "print('Perimeter of Region 14: {} pixels'.format(props[13].perimeter))\n",
         "print('Orientation of Region 14: {} degrees'.format(props[13].orientation))"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -554,7 +554,7 @@
         "plt.tight_layout()\n",
         "plt.show()"
       ],
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -610,7 +610,7 @@
         "ax.set_axis_off()\n",
         "plt.show()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -671,7 +671,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,11 +741,11 @@
         "from skimage.measure import regionprops\n",
         "from skimage import data, img_as_ubyte\n",
         "\n",
-        "# Supón que ya tienes `label_image` y `IG` definidos\n",
-        "# IG debe ser una imagen en escala de grises, tipo uint8\n",
-        "# label_image es el mapa de etiquetas de regiones\n",
+        "# Assume that `label_image` and `IG` are already defined\n",
+        "# IG should be a grayscale image of type uint8\n",
+        "# label_image is the label map of regions\n",
         "\n",
-        "props = regionprops(label_image,intensity_image=IG) # Obain again the properties after removal of spourious regions\n",
+        "props = regionprops(label_image,intensity_image=IG) # Obtain again the properties after removal of spourious regions\n",
         "\n",
         "nregions = len(props)\n",
         "\n",
@@ -769,7 +769,7 @@
         "\n",
         "    iregion = iregion + 1\n",
         "\n",
-        "# Exportar a Excel\n",
+        "# Export to Excel file\n",
         "df = pd.DataFrame(props_texture, columns=['Contrast', 'Dissimilarity', 'Homogeneity', 'Energy', 'Correlation'])\n",
         "df.to_excel(\"Texture_features.xlsx\", index=False)\n",
         "df"
@@ -782,7 +782,7 @@
           "height": 651
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1331,7 +1331,7 @@
         "plt.tight_layout()\n",
         "plt.show()\n"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1385,7 +1385,7 @@
         "\n",
         "print('Entropy of the objects: {}'.format(entropy))"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1428,7 +1428,7 @@
         "plt.title(\"Region entropy vs Region contrast\")\n",
         "plt.show()"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1542,7 +1542,7 @@
         "H_max = -np.sum(prob_equal * np.log2(prob_equal), axis=0)\n",
         "print('Maximum Entropy = {} bits/pixel'.format(H_max))"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
