--- a/M4_Deep Learning/p1_segmentation.ipynb
+++ b/M4_Deep Learning/p1_segmentation.ipynb
@@ -12,6 +12,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "# MODULE 4: DEEP LEARNING\n",
+        "\n",
+        "Christian Mata, PhD"
+      ],
+      "metadata": {
+        "id": "dEmULOHCQ6iN"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "cZCM65CBt1CJ"
       },
@@ -55,7 +66,7 @@
         "id": "rCSP-dbMw88x"
       },
       "source": [
-        "# Image segmentation"
+        "# PART 1: Image segmentation"
       ]
     },
     {
