--- a/M4_Deep Learning/Exercise 5.ipynb
+++ b/M4_Deep Learning/Exercise 5.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/xtianu/CV_Tirana/blob/main/M2_Image%20Segmentation/Exercise%202.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/xtianu/CV_Tirana/blob/main/M4_Deep%20Learning/Exercise%205.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -16,7 +16,7 @@
         "id": "5ZUuhuOnoIfl"
       },
       "source": [
-        "# Module 2: IMAGE SEGMENTATION"
+        "# Module 4: DEEP LEARNING"
       ]
     },
     {
@@ -31,24 +31,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Exercise 2\n",
+        "# Exercise 5\n",
         "\n",
         "**Before starting:**\n",
         "\n",
         "- Create a GitHub repository to upload the solution of this exercise.\n",
         "- Share this GitHub link to your professor.\n",
         "\n",
-        "**Objectives**\n",
+        "**INSTRUCTIONS**\n",
         "\n",
-        "Generate a single Python notebook implementing and answering the following questions:\n",
-        "\n",
-        "🔹 **Task 1:** Load an image and apply a thresholding method. Analyze and discuss the segmentation results.\n",
-        "\n",
-        "🔹 **Task 2:** Load an image and apply an unsupervised segmentation method (e.g., K-Means). Evaluate and comment on the outcome.\n",
-        "\n",
-        "🔹 **Task 3:** Load an image and apply a supervised segmentation method (e.g., with annotated labels or using a classifier). Discuss the effectiveness and limitations.\n",
-        "\n",
-        "🔹 **Task 4:** Explain the main differences between supervised and unsupervised segmentation approaches. Discuss their advantages and disadvantages, and illustrate your explanation with an example.\n"
+        "- Find on internet an example similar to our examples presented in class about: Classification and Segmentation. You can use any repository and any opensource database (Keras, Kaggle... etc).\n"
       ],
       "metadata": {
         "id": "9HoIhrFu2MoR"
